# modzboid

./: .gitignore  CLA.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/migrations/: 001_initial.sql  002_conflict_tables.sql  003_lua_analysis_tables.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_core/: config.rs  db.rs  error.rs  mod.rs  types.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/api_docs/: commands.rs  mod.rs  search.rs
src-tauri/src/features/backup/: commands.rs  manager.rs
src-tauri/src/features/cli/: handler.rs
src-tauri/src/features/conflicts/: commands.rs  detector.rs  mod.rs  scanner.rs
src-tauri/src/features/diagnostics/: analyzer.rs  bisect.rs  commands.rs  mod.rs  preflight.rs
src-tauri/src/features/discovery/: cache.rs  commands.rs  mod.rs  parser.rs  scanner.rs  watcher.rs
src-tauri/src/features/extensions/: commands.rs  loader.rs  mod.rs
src-tauri/src/features/inspector/: auto_fixer.rs  commands.rs  item_references.rs  lua_checker.rs  migration.rs  mod.rs  script_checker.rs  validator.rs
src-tauri/src/features/launcher/: commands.rs
src-tauri/src/features/load_order/: commands.rs  community_rules.rs  deps.rs  mod.rs  rules.rs  topo_sort.rs
src-tauri/src/features/profiles/: commands.rs  storage.rs
src-tauri/src/features/rcon/: client.rs  commands.rs
src-tauri/src/features/sandbox/: commands.rs  parser.rs
src-tauri/src/features/server_config/: categories.rs  commands.rs  mod.rs  parser.rs
(+98 files in other folders)
